style: revert hero, fix overflow at section level with overflow-x: clip

--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -2,12 +2,8 @@
    Base Hero Layout
 --------------------------- */
 .hero-container .hero-wrapper {
-  max-width: 1200px;
-  margin: 0 auto;
+  max-width: unset;
   padding: 0;
-  width: 100%;
-  overflow: hidden;
-  border-radius: 8px;
 }
 
 .hero {
